# Conways_Game_of_Life

./: .gitignore  CMakeLists.txt  README.md  teste.cpp  testfile.cpp
include/: arguments.h  canvas.h  classes.h  common.h  game_manager.h  help.h  life_game.h
output/: barber_1.txt
src/: arguments.cpp  driver_canvas  driver_canvas.cpp  help.cpp  life_game.cpp  main.cpp  mainselan.cpp
